# psim_starter_code

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/birds/: box.scn  box2.scn  longhorns.scn  solar.scn  spheres.scn  stack.scn
cmake/: common_functions.cmake  igl_viewer.cmake
grading/: base.py  bird1.py  bird2.py  cloth1.py  goo1.py  goo2.py  psim_grade.py  util.py
lib/: CMakeLists.txt
lib/core/: PhysicsCore.cc  PhysicsCore.h
lib/core/bird1/: BirdsCore.cpp  BirdsCore.h  CMakeLists.txt  RigidBodyInstance.cpp  RigidBodyInstance.h  RigidBodyTemplate.cpp  RigidBodyTemplate.h  SimParameters.h  VectorMath.h  helper.cc  helper.h
lib/core/bird2/: BirdsCore.cpp  BirdsCore.h  CollisionDetection.cpp  CollisionDetection.h  Distance.h  RigidBodyInstance.cpp  RigidBodyInstance.h  RigidBodyTemplate.cpp  RigidBodyTemplate.h  SimParameters.h
lib/core/cloth1/: ClothCore.cpp  ClothCore.h  SimParameters.h
lib/core/goo1/: GooCore.cpp  GooCore.h  SceneObjects.h  SimParameters.h
lib/core/goo2/: GooCore.cpp  GooCore.h  SceneObjects.h  SimParameters.h
lib/python/: CMakeLists.txt  module.cc
lib/python/bird1/: bird1.cc  bird1.h
lib/python/bird2/: bird2.cc  bird2.h
lib/python/cloth1/: cloth1.cc  cloth1.h
lib/python/goo1/: goo1.cc  goo1.h
lib/python/goo2/: goo2.cc  goo2.h
lib/vis/: CMakeLists.txt  IglVisualizer.h  PhysicsHook.cc  PhysicsHook.h
lib/vis/bird1/: BirdsHook.cpp  BirdsHook.h  BirdsVisualizer.cpp  BirdsVisualizer.h
lib/vis/bird2/: BirdsHook.cpp  BirdsHook.h  BirdsVisualizer.cpp  BirdsVisualizer.h  CMakeLists.txt  furious_bird.inc
lib/vis/cloth1/: ClothHook.cpp  ClothHook.h  ClothVisualizer.cpp  ClothVisualizer.h
lib/vis/goo1/: GooHook.cpp  GooHook.h  GooVisualizer.cpp  GooVisualizer.h
lib/vis/goo2/: GooHook.cpp  GooHook.h  GooVisualizer.cpp  GooVisualizer.h
src/: CMakeLists.txt
src/bird1/: CMakeLists.txt  basic_bird1.py  bird1.py  reference_bird1.py
src/bird2/: CMakeLists.txt  bird2.py  demo_bird2_new_interface.py  reference_bird2.py
src/cloth1/: CMakeLists.txt  cloth1.py  reference_cloth1.py
src/goo1/: CMakeLists.txt  demo_test_goo1.py  goo1.py  reference_goo1.py
src/goo2/: CMakeLists.txt  goo1.py  reference_goo2.py
